Bug 250143, Don't send events for unknown buttons, r+sr=roc